[package]
name = "jetbra-tools"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.21.7"
chrono = "0.4.31"
rand = "0.8.5"
rcgen = "0.12.0"
rsa = "0.9.6"
rust-embed = "8.2.0"
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
toml = "0.8.8"
