[package]
name = "jetbra-tools"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.4", features = ["http2", "multipart", "ws"] }
base64 = "0.21.7"
chrono = "0.4.33"
openssl = "0.10.63"
rand = "0.8.5"
rcgen = { version = "0.12.1", features = ["pem", "x509-parser"] }
rsa = "0.9.6"
rust-embed = "8.2.0"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
time = { version = "0.3.31", features = ["macros"] }
tokio = { version = "1.35.1", features = ["full"] }
toml = "0.8.8"
tower = "0.4.13"
uuid = { version = "1.7.0", features = [
    "fast-rng", # Use a faster (but still sufficiently random) RNG
    "v4", # Lets you generate random UUIDs
] }
x509-parser = "0.15.1"
