[tool.poetry]
name = "jetbra-tools"
version = "0.1.0"
description = "Related tools for jetbra based on enthusiastic Mr. Big"
authors = ["delph1s <admin@delph1s.com>"]
maintainers = []
license = "MIT"
readme = "README.md"
packages = [{ include = "jbt", from = "src" }]
include = [{ path = "tests", format = "sdist" }]
homepage = "https://github.com/delph1s/jetbra-tools/tree/python"
repository = "https://github.com/delph1s/jetbra-tools/tree/python"
documentation = "https://github.com/delph1s/jetbra-tools/tree/python/README.md"
keywords = [ "jetbra", "tools"]
classifiers = [
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

[tool.poetry.urls]
Changelog = "https://gitlab.idss.work/futuresearch/pandora/CHANGELOG.md"

[[tool.poetry.source]]
name = "tuna"
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
priority = "default"

[[tool.poetry.source]]
name = "official"
url = "https://pypi.org/simple"
priority = "primary"

[tool.poetry.dependencies]
python = "^3.10"
click = { version = "^8.1.3", source = "tuna" }
pycryptodome = {version = "^3.18.0", source = "tuna"}
cryptography = {version = "^41.0.3", source = "tuna"}

[tool.poetry.group.dev.dependencies]
pylint = "^2.17.4"
isort = "^5.12.0"
pytest = "^7.3.1"
tox = "^4.5.2"
mkdocs = "^1.4.3"
mkdocs-material = "^8.5.11"
pytest-pylint = "^0.19.0"
pre-commit = "^3.3.2"
pytest-mock = "^3.10.0"
pytest-cov = "^4.1.0"

[tool.poetry.scripts]
jbt = "jbt.cmdline:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pylint.design]
max-line-length = 120
